@@ -18,7 +18,10 @@
           "nick": "melbot_20220705",
           "package": "./package.json",
           "repository": "./"
-        }
+        },
+        "bookmark": [
+          "https://www.reddit.com/r/EarthPorn/comments/vrqeh4/horse_shoe_canyon_arizona_oc_4032x3024/"
+        ]
       }
     </script>
 
@@ -36,22 +39,30 @@
 
           <pre>
 
-            Name: ${di.data.gitmark['nick'] + '\n'}
-            Birth: ${di.data.birth} ${'\n'}
-            Energy: ${di.data.energy} Marks ${'\n'}
-            Address: <a href="https://chainz.cryptoid.info/marks/address.dws?${di
+                  Name: ${di.data.gitmark['nick'] + '\n'}
+                  Birth: ${di.data.birth} ${'\n'}
+                  Energy: ${di.data.energy} Marks ${'\n'}
+                  Address: <a href="https://chainz.cryptoid.info/marks/address.dws?${di
             .data.address}.htm" target="_blank">${di.data.address}</a>
 
 
-    </pre>
+          </pre>
           <h4>Activity</h4>
           <pre>
-<a
-            href="https://gitmark.info/${di.data.gitmark['@id'].split(':')[1]}"
-            target="_blank"
-            >Genesis</a
-          >        
-            </pre>
+      <a
+                  href="https://gitmark.info/${di.data.gitmark['@id'].split(
+            ':'
+          )[1]}"
+                  target="_blank"
+                  >Genesis</a
+                >
+                  </pre>
+
+          <h4>Bookmarks</h4>
+          <pre>
+                  <a href="${di.data.bookmark[0]}" target="_blank">${di.data
+            .bookmark[0]}</a>
+                </pre>
 
           <a
             href="https://gitmark.info/${di.data.gitmark['@id'].split(':')[1]}"
