@@ -1,4 +1,9 @@
-Done:
+20220705
+exodus
+bookmarks
+
+20220704
+new bot
 
 20220703
 exodus genesis
